force-app/main/default/objects/Account/fields/Mail_Merge_Company_Signature__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Company_Signature__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Company_Signature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Company Signature</label>
    <type>Text</type>
</CustomField>