force-app/main/default/objects/Account/fields/MainSalesPlace__c.field-meta.xml
<CustomField>
    <fullName>MainSalesPlace__c</fullName>
    <label>MAIN SALES PLACE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>