force-app/main/default/objects/Account/fields/MainShippingOpponent__c.field-meta.xml
<CustomField>
    <fullName>MainShippingOpponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF MAIN DELIVERY PLACE</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先 (主要配送相手方)</relationshipLabel>
    <relationshipName>MainShippingOpponent</relationshipName>
    <type>Lookup</type>
</CustomField>