force-app/main/default/objects/Account/fields/MinProfitRatioNICTax__c.field-meta.xml
<CustomField>
    <fullName>MinProfitRatioNICTax__c</fullName>
    <label>Minimum Profit Ratio NIC Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>