force-app/main/default/objects/Account/fields/NameOfGoods__c.field-meta.xml
<CustomField>
    <fullName>NameOfGoods__c</fullName>
    <label>PRODUCT NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>