force-app/main/default/objects/Account/fields/numberof_ship__c.field-meta.xml
<CustomField>
    <fullName>numberof_ship__c</fullName>
    <label>TOTAL NO. OF SHIPMENT</label>
    <summaryFilterItems>
        <field>CustomObject1__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>見　積</value>
    </summaryFilterItems>
    <summaryForeignKey>CustomObject1__c.Field1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>