force-app/main/default/objects/Account/fields/NVOCC_ID__c.field-meta.xml
<CustomField>
    <fullName>NVOCC_ID__c</fullName>
    <label>NVOCC/CARRIER ID(4桁)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>