force-app/main/default/objects/Account/fields/OrganizationCode__c.field-meta.xml
<CustomField>
    <fullName>OrganizationCode__c</fullName>
    <inlineHelpText>Organization Code (Oc)</inlineHelpText>
    <label>ORGANIZATION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>