force-app/main/default/objects/Account/fields/over_max__c.field-meta.xml
<CustomField>
    <fullName>over_max__c</fullName>
    <formula>Accu_receivablelimits__c + receivable_limits__c  -  Unpaid__c -  UncollectedOnBehalfOfLocal__c</formula>
    <label>BAL TO MAX COMBINED AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>