force-app/main/default/objects/Account/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>PAYMENT METHOD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>振込</fullName>
            </value>
            <value>
                <fullName>現金</fullName>
            </value>
            <value>
                <fullName>小切手</fullName>
            </value>
            <value>
                <fullName>振込/現金</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>