force-app/main/default/objects/Account/fields/PaymentBaseDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentBaseDate__c</fullName>
    <label>PAYMENT BASE DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PayBaseDate</valueSetName>
    </valueSet>
</CustomField>