force-app/main/default/objects/Account/fields/paymentpossibility__c.field-meta.xml
<CustomField>
    <fullName>paymentpossibility__c</fullName>
    <label>POSSIBILITY OF COLLECTION</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>可能性あり</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>一部入金</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>