force-app/main/default/objects/Account/fields/ProductHandle__c.field-meta.xml
<CustomField>
    <fullName>ProductHandle__c</fullName>
    <label>CARGO FEATURE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>