force-app/main/default/objects/Account/fields/receivable_limits__c.field-meta.xml
<CustomField>
    <fullName>receivable_limits__c</fullName>
    <label>MAXIMUM AMOUNT OF RECEIVABLES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>