force-app/main/default/objects/Account/fields/REGISTRATION_NO_SERIAL__c.field-meta.xml
<CustomField>
    <fullName>REGISTRATION_NO_SERIAL__c</fullName>
    <label>REGISTRATION NO(SERIAL)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>