force-app/main/default/objects/Account/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>WRITTEN AGREEMENT WITH NEW ACCOUNT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>原本</fullName>
                <color>#006600</color>
                <label>原本</label>
            </value>
            <value>
                <fullName>コピー</fullName>
                <color>#78C953</color>
                <label>コピー</label>
            </value>
            <value>
                <fullName>不要（取引しない）</fullName>
                <color>#FF0000</color>
                <label>不要（取引しない）</label>
            </value>
            <value>
                <fullName>不要（パートナーとの清算）</fullName>
                <color>#A845DC</color>
                <label>不要（パートナーとの清算）</label>
            </value>
            <value>
                <fullName>不要（現時点で取引がない=&gt;新規案件の対応の際には必要になる）</fullName>
                <color>#F3D904</color>
                <label>不要（現時点で取引がない=&gt;新規案件の対応の際には必要になる）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>