force-app/main/default/objects/Account/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <label>Report ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>