force-app/main/default/objects/Account/fields/Report_Password__c.field-meta.xml
<CustomField>
    <fullName>Report_Password__c</fullName>
    <label>Report Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>