force-app/main/default/objects/Account/fields/SalesArea__c.field-meta.xml
<CustomField>
    <fullName>SalesArea__c</fullName>
    <label>SALES REGIONS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>