force-app/main/default/objects/Account/fields/Selling_Rate__c.field-meta.xml
<CustomField>
    <fullName>Selling_Rate__c</fullName>
    <inlineHelpText>Put Information of Selling Rate for The Customer, Partner</inlineHelpText>
    <label>STANDARD SELLING RATE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>