force-app/main/default/objects/Account/fields/SendPlaceManufacturer__c.field-meta.xml
<CustomField>
    <fullName>SendPlaceManufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EX-DELIVERY PLACE・ADDRESS</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先 (当初発送場所・製造者名)</relationshipLabel>
    <relationshipName>SendPlaceManufacturer</relationshipName>
    <type>Lookup</type>
</CustomField>