force-app/main/default/objects/Account/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <description>当社のどのようなサービスをご利用いただいているかを記入してください。</description>
    <label>SERVICE IN USE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Custom_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>取引なし</fullName>
            </value>
            <value>
                <fullName>Forwarding</fullName>
            </value>
            <value>
                <fullName>Custom Clearance</fullName>
            </value>
            <value>
                <fullName>Forwarding/Custom Clearance</fullName>
            </value>
            <value>
                <fullName>過去取引有 - Forwarding</fullName>
            </value>
            <value>
                <fullName>過去取引有 - Custom Clearance</fullName>
            </value>
            <value>
                <fullName>過去取引有 - Forwarding/Custom Clearance</fullName>
            </value>
            <value>
                <fullName>FlexiTank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>