force-app/main/default/objects/Account/fields/shimebi__c.field-meta.xml
<CustomField>
    <fullName>shimebi__c</fullName>
    <label>shimebi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>末締め</fullName>
            </value>
            <value>
                <fullName>20日締め</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>