force-app/main/default/objects/Account/fields/TAX_CODE__c.field-meta.xml
<CustomField>
    <fullName>TAX_CODE__c</fullName>
    <label>TAX CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>