force-app/main/default/objects/Account/fields/TaxationNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxationNumber__c</fullName>
    <label>ACCOUNT NUMBER OF DEFFERED/REAL-TIME</label>
    <type>TextArea</type>
</CustomField>