force-app/main/default/objects/Account/fields/TotalBadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalBadDebtUSD__c</fullName>
    <formula>FMSBadDebtUSD__c +  WMSBadDebtUSD__c</formula>
    <label>TOTAL BAD DEBT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>