force-app/main/default/objects/Account/fields/TotalBadDedtLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBadDedtLocal__c</fullName>
    <formula>FMSBadDebtLocal__c +  WMSBadDebtLocal__c</formula>
    <label>TOTAL BAD DEBT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>