force-app/main/default/objects/Account/fields/UncollectedReceivableFCY__c.field-meta.xml
<CustomField>
    <fullName>UncollectedReceivableFCY__c</fullName>
    <label>UNCOLLECTED RECEIVABLE(FCY)</label>
    <summarizedField>CustomObject1__c.SellingUnreceivedUSD__c</summarizedField>
    <summaryFilterItems>
        <field>CustomObject1__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Quotation</value>
    </summaryFilterItems>
    <summaryForeignKey>CustomObject1__c.Field1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>