force-app/main/default/objects/Account/fields/Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Unpaid__c</fullName>
    <description>未集金額合計</description>
    <label>UNCOLLECTED AMOUNTS</label>
    <summarizedField>CustomObject1__c.NyukinzandakaJPY__c</summarizedField>
    <summaryFilterItems>
        <field>CustomObject1__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>見　積</value>
    </summaryFilterItems>
    <summaryForeignKey>CustomObject1__c.Field1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>