force-app/main/default/objects/Account/fields/unpaidNumber__c.field-meta.xml
<CustomField>
    <fullName>unpaidNumber__c</fullName>
    <label>NUMBER OF H B/L PAYMENT UNCOLLECTED</label>
    <summaryFilterItems>
        <field>CustomObject1__c.HistoryOfUnpaid__c</field>
        <operation>equals</operation>
        <value>○</value>
    </summaryFilterItems>
    <summaryForeignKey>CustomObject1__c.Field1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>