force-app/main/default/objects/Account/fields/WarehouseService_port__c.field-meta.xml
<CustomField>
    <fullName>WarehouseService_port__c</fullName>
    <label>WAREHOUSE SERVICE BROKER DETAILS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Custom_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>