force-app/main/default/objects/Account/fields/WaringReceivableAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>WaringReceivableAmountFCY__c</fullName>
    <label>Warning Receivables Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>