force-app/main/default/objects/Account/fields/WarningOnBehalfOfAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>WarningOnBehalfOfAmountFCY__c</fullName>
    <label>Warning OnBehalfOf Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>