force-app/main/default/objects/Account/fields/WarningOnBehalfOfAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>WarningOnBehalfOfAmountLocal__c</fullName>
    <label>Warning OnBehalfOf Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>