force-app/main/default/objects/Account/fields/WarningProfitRatioNICTax__c.field-meta.xml
<CustomField>
    <fullName>WarningProfitRatioNICTax__c</fullName>
    <label>Warning Profit Ratio NIC Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>