force-app/main/default/objects/Account/fields/WMSBadDebtLocal__c.field-meta.xml
<CustomField>
    <fullName>WMSBadDebtLocal__c</fullName>
    <label>WMS BAD DEBT(LOCAL)</label>
    <summarizedField>WorkOrder__c.BadDebtLocal__c</summarizedField>
    <summaryForeignKey>WorkOrder__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>