force-app/main/default/objects/Account/fields/WMSBadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>WMSBadDebtUSD__c</fullName>
    <label>WMS BAD DEBT(USD)</label>
    <summarizedField>WorkOrder__c.BadDebtUSD__c</summarizedField>
    <summaryForeignKey>WorkOrder__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>