force-app/main/default/objects/Account/recordTypes/CustomerB2B.recordType-meta.xml
<RecordType>
    <fullName>CustomerB2B</fullName>
    <active>true</active>
    <label>Customer(B2B)</label>
</RecordType>