force-app/main/default/objects/Account/recordTypes/VendorSupplier.recordType-meta.xml
<RecordType>
    <fullName>VendorSupplier</fullName>
    <active>true</active>
    <label>Vendor/Supplier</label>
</RecordType>