force-app/main/default/objects/Account/validationRules/existing_tax_code_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>existing_tax_code_not_null</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(   BillingCountryCode__c  )=&quot;VN&quot;,ISBLANK( TAX_CODE__c ))</errorConditionFormula>
    <errorDisplayField>TAX_CODE__c</errorDisplayField>
    <errorMessage>Vui lòng điền MST khi chuyển sang Customer-Existing.</errorMessage>
</ValidationRule>